# fdf

./: CMakeLists.txt  main.c
libft/: Makefile  ft_isascii.c  ft_isdigit.c  ft_strcat.c  ft_strclr.c  ft_strcmp.c  ft_strsplit.c  get_next_line.c  libft.h
